--- a/css/theme2.css
+++ b/css/theme2.css
@@ -4429,6 +4429,11 @@ section {
     }
 }
 
+.table {
+    width: 97% !important;
+
+    
+}
 .table-style1 {
     max-width: 280px;
     margin-bottom: 30px;
@@ -4591,7 +4596,7 @@ section {
 
 .table-data2.table thead th {
     font-size: 12px;
-    color: #555;
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
     border: none;
     font-weight: 600;
@@ -4603,9 +4608,9 @@ section {
 .table-data2.table thead th:first-child {
     padding-right: 0;
 }
-
+/* diogo mecheu aki */
 .table-data2.table tbody {
-    background: #fff;
+    background: rgb(253, 218, 253);
 }
 
 .table-data2.table tbody tr td:first-child {
