--- a/css/vendas.css
+++ b/css/vendas.css
@@ -19,7 +19,7 @@
 }
 
 .au-btn--small1 {
-    padding: 0 20px;
+    padding: 0 75px;
     line-height: 40px;
     font-size: 14px;
 }
@@ -27,7 +27,7 @@
 .card-header1 {
     padding: .75rem 1.25rem;
     margin-bottom: 0;
- 
+
     border-bottom: 1px solid rgba(0, 0, 0, .125);
 }
 
@@ -46,21 +46,30 @@
     padding-right: 10px;
 }
 
+.seta {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+
+}
+
 .table-data2.table tbody {
-    background: rgb(242, 247, 203);
+    background: rgb(255, 240, 211);
 }
 
 .table-data__tool .table-data__tool-right1 {
     /* margin-top: 10px; */
     margin: auto;
 }
-.bg-grey1{
+
+.bg-grey1 {
     background-color: rgb(252, 0, 0) !important;
 }
+
 input[type=checkbox1],
 input[type=radio1] {
     box-sizing: border-box;
     padding: 0;
     margin-left: 15px;
 }
-
