--- a/css/vendas.css
+++ b/css/vendas.css
@@ -77,3 +77,11 @@ input[type=radio1] {
     padding: 0;
     margin-left: 15px;
 }
+
+input{
+    font-size: 15px;
+}
+.top-balcao{
+    font-size: 20px;
+    color: rgb(13, 148, 24);
+}
