update image e inicio do estoque

--- a/css/stock.css
+++ b/css/stock.css
@@ -11,3 +11,10 @@ footer {
 .border-cizna{
     border: 1px solid grey;
 }
+
+.bg-abaixo{
+    background-color: rgb(255, 94, 94);
+}
+.bg-acima{
+    background-color: rgb(138, 245, 138);
+}
