--- a/css/theme.css
+++ b/css/theme.css
@@ -287,7 +287,7 @@ section {
 
 }
 
-.container-fluid {
+.container-fluid-burguer {
     background-image: url("../images/Background.png") !important;
 
 }
@@ -380,13 +380,29 @@ input[type=checkbox] {
 
 .page-content--bge5 {
     background: #e5e5e5;
-    height: 130vh;
+
+}
+
+/* height: 130vh;*/
+.border-input {
+    border: 1px solid rgb(5, 164, 212) !important;
 }
 
 .login-wrap {
     max-width: 600px;
     padding-top: 8vh;
     margin: 0 auto;
+}
+
+.bg-burguer {
+    background-image: url('../images/Background.png') !important;
+    background-repeat: no-repeat !important;
+    background-position: top !important;
+}
+.bg-burguer-center {
+    background-image: url('../images/Background.png') !important;
+    background-repeat: no-repeat !important;
+    background-position: center !important;
 }
 
 .login-logo {
