--- a/css/theme.css
+++ b/css/theme.css
@@ -382,7 +382,9 @@ input[type=checkbox] {
     background: #e5e5e5;
 
 }
-
+.inputs input, select{
+    border: 1px solid rgb(5, 164, 212) !important;
+}
 /* height: 130vh;*/
 .border-input {
     border: 1px solid rgb(5, 164, 212) !important;
