--- a/css/stock.css
+++ b/css/stock.css
@@ -30,3 +30,17 @@ select,
 option {
     font-weight: 600;
 }
+
+.checkbox1 {
+    display: inline-block;
+    background-color: white;
+    width: 15px;
+    height: 15px;
+    border: 1px solid black;
+}
+
+.checkbox1:checked {
+    background-color: rgb(0, 136, 255);
+    width: 15px;
+    height: 15px;
+}
