updade estoque a pagar

--- a/css/theme.css
+++ b/css/theme.css
@@ -3269,9 +3269,15 @@ select {
 }
 
 .overview-item--c4 {
-    background-image: -moz-linear-gradient(90deg, #45b649 0%, #dce35b 100%);
-    background-image: -webkit-linear-gradient(90deg, #45b649 0%, #dce35b 100%);
-    background-image: -ms-linear-gradient(90deg, #45b649 0%, #dce35b 100%);
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #ffffff 100%);
+    background-image: -webkit-linear-gradient(90deg, #000000 0%, #a79c01 100%);
+    background-image: -ms-linear-gradient(90deg, #000000 0%, #9b9801 100%);
+}
+
+.overview-item--c5{
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #ff0000 100%);
+    background-image: -webkit-linear-gradient(90deg, #000000 0%, #ff0000 100%);
+    background-image: -ms-linear-gradient(90deg, #000000 0%, #ff0000 100%);
 }
 
 .overview-box .icon {
