finalizando painel de controle

--- a/css/theme.css
+++ b/css/theme.css
@@ -3274,16 +3274,28 @@ select {
     background-image: -ms-linear-gradient(90deg, #000000 0%, #9b9801 100%);
 }
 
-.overview-item--c5{
-    background-image: -moz-linear-gradient(90deg, #000000 0%, #ff0000 100%);
+.overview-item--c5 {
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #ffffff 100%);
     background-image: -webkit-linear-gradient(90deg, #000000 0%, #ff0000 100%);
     background-image: -ms-linear-gradient(90deg, #000000 0%, #ff0000 100%);
 }
 
-.overview-item--c6{
-    background-image: -moz-linear-gradient(90deg, #000000 0%, #001d9c 100%);
+.overview-item--c6 {
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #ffffff 100%);
     background-image: -webkit-linear-gradient(90deg, #000000 0%, #002e83 100%);
     background-image: -ms-linear-gradient(90deg, #000000 0%, #1e00a5 100%);
+}
+
+.overview-item--c7 {
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #ffffff 100%);
+    background-image: -webkit-linear-gradient(90deg, #000000 0%, #26a100 100%);
+    background-image: -ms-linear-gradient(90deg, #000000 0%, #ebeaf1 100%);
+}
+
+.overview-item--c8 {
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #007239 100%);
+    background-image: -webkit-linear-gradient(90deg, #000000 0%, #ff9900 100%);
+    background-image: -ms-linear-gradient(90deg, #000000 0%, #ebeaf1 100%);
 }
 
 .overview-box .icon {
