--- a/css/theme.css
+++ b/css/theme.css
@@ -3256,16 +3256,16 @@ select {
     background-image: -ms-linear-gradient(90deg, #000000 0%, #3385ff 100%);
 }
 
-.overview-item--c22 {
-    background-image: -moz-linear-gradient(90deg, #11998e 0%, #38ef7d 100%);
-    background-image: -webkit-linear-gradient(90deg, #11998e 0%, #38ef7d 100%);
-    background-image: -ms-linear-gradient(90deg, #11998e 0%, #38ef7d 100%);
+.overview-item--c2 {
+    background-image: -moz-linear-gradient(90deg, #030303 0%, #038b37 100%);
+    background-image: -webkit-linear-gradient(90deg, #000000 0%, #079c40 100%);
+    background-image: -ms-linear-gradient(90deg, #000000 0%, #25be60 100%);
 }
 
-.overview-item--c33 {
-    background-image: -moz-linear-gradient(90deg, #ee0979 0%, #ff6a00 100%);
-    background-image: -webkit-linear-gradient(90deg, #ee0979 0%, #ff6a00 100%);
-    background-image: -ms-linear-gradient(90deg, #ee0979 0%, #ff6a00 100%);
+.overview-item--c3 {
+    background-image: -moz-linear-gradient(90deg, #000000 0%, #ff6a00 100%);
+    background-image: -webkit-linear-gradient(90deg, #000000 0%, #ff6a00 100%);
+    background-image: -ms-linear-gradient(90deg, #000000 0%, #ff6a00 100%);
 }
 
 .overview-item--c4 {
