updade cliente form

--- a/css/theme.css
+++ b/css/theme.css
@@ -782,7 +782,7 @@ select {
     line-height: 43px;
     border: 1px solid #e5e5e5;
     font-size: 14px;
-    color: #666;
+    color: rgb(0, 0, 0)44, 40, 40);
     padding: 0 17px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
