--- a/css/theme.css
+++ b/css/theme.css
@@ -75,8 +75,7 @@ button {
 
 img {
     max-width: 100%;
-    height: auto;
-    border: 1px solid whitesmoke;
+    height: 40px;
 }
 
 p {
@@ -783,7 +782,7 @@ select {
     line-height: 43px;
     border: 1px solid #e5e5e5;
     font-size: 14px;
-    color: rgb(0, 0, 0)44, 40, 40);
+    color: rgb((0, 0, 0)44, 40, 40);
     padding: 0 17px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -1497,6 +1496,10 @@ select {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+    width: auto;
+    height: auto;
+    max-width: 50px;
+    max-height: 40px;
 }
 
 .account-item .image>img {
